getting closer to a real webservice test, fixing some deprecations, refs #21, #12